// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`delete-media-recycle-bin-item should handle non-existent media in recycle bin 1`] = `
{
  "content": [
    {
      "text": "{"type":"Error","title":"The content could not be found","status":404,"operationStatus":"NotFound"}",
      "type": "text",
    },
  ],
  "isError": true,
}
`;

exports[`delete-media-recycle-bin-item should permanently delete a media item from recycle bin 1`] = `
{
  "content": [
    {
      "text": "",
      "type": "text",
    },
  ],
}
`;
